--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/chriskwan/tutorial-es6-mortgage-calculator#readme",
   "devDependencies": {
     "babel-cli": "^6.6.5",
-    "babel-core": "^6.7.2"
+    "babel-core": "^6.7.2",
+    "babel-preset-es2015": "^6.6.0"
   }
 }
