--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "babel": "babel --presets es2015 js/main.js -o build/main.bundle.js",
-    "start": "http-server -p 9000"
+    "start": "http-server -p 9000",
+    "webpack": "webpack"
   },
   "repository": {
     "type": "git",
@@ -20,7 +21,9 @@
   "devDependencies": {
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.2",
+    "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
-    "http-server": "^0.9.0"
+    "http-server": "^0.9.0",
+    "webpack": "^1.12.14"
   }
 }
